# git-cargo-dependency-demo

./: README.md
crate-1/: Cargo.toml
crate-2/: Cargo.toml
crate-2/src/: lib.rs
crate-3/: Cargo.toml
crate-3/src/: lib.rs
executable/: Cargo.toml
executable/src/: main.rs
