[package]
name = "executable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-1={git="ssh://git@github.com/kenkoooo/git-cargo-dependency-demo.git"}
crate-2={git="ssh://git@github.com/kenkoooo/git-cargo-dependency-demo.git"}
